# RPG-Game

./: .gitignore  CMakeLists.txt  README.md
data/Accounts/LSweetSour/: config.json
data/Accounts/LSweetSour/Characters/oOSweetOo/: character.json
data/Accounts/yappy2000/: config.json
data/Accounts/yappy2000/Characters/Pineapple/: character.json
data/Accounts/yappy2000/Characters/百里穿雲/: character.json
data/Areas/BlackForest/: info.json  terrain.txt
data/Areas/Castle/: info.json
data/Areas/Caves/: info.json
data/Areas/Market/: info.json
data/Areas/Sawmill/: info.json
data/Areas/Suburbs/: info.json
data/Areas/TownCenter/: info.json
data/Mobs/: robber.json
src/: AreaObject.cpp  AreaObject.h  Game.cpp  Game.h  main.cpp
src/GameObject/: GameObject.cpp  GameObject.h
src/GameObject/Entity/: Entity.cpp  Entity.h
src/GameObject/Entity/Character/: Character.cpp  Character.h
src/GameObject/Items/: Items.cpp  Items.h
src/include/: Position.h  Position.hpp
